--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <!-- Change the title below -->
-  <title>News daily</title>
+  <title>the Unseen</title>
   <link rel="stylesheet" href="./style.css" />
   <!-- dont forget the meta tag for responsiveness -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +18,9 @@
       <nav class="navbar">
 
         <!-- LOGO -->
-        <div class="logo">MC</div>
+        <a href="www.google.com">
+          <div class="logo">Unseen Magazine</div>
+        </a>
 
         <!-- NAVIGATION MENU -->
         <ul class="nav-links">
@@ -28,12 +30,12 @@
           <input type="checkbox" id="checkbox_toggle" />
 
 
-          <!-- NAVIGATION MENUS -->
+          <!-- NAVIGATION MENU -->
           <div class="menu">
             <li><a href="/">Home</a></li>
             <li><a href="/">About</a></li>
-            <li><a href="/">help</a></li>
-            <li><a href="/">hola senora</a></li>
+            <li><a href="/">Blog</a></li>
+            <li><a href="/">Destinations</a></li>
           </div>
         </ul>
       </nav>
@@ -45,32 +47,91 @@
   <section class="grid-parent">
 
     <div class="grid-item grid-a">
-      <p> A- More text about the news</p>
-      <a href="https://google.com">Read more here</a>
+      <h1>ENCHANTMENT UNVEILED</h1>
+      <img class=venice1 src="/code/Venice2.jpg">
+      &nbsp;
+      <h2>The Venice Masquerade Festival's Mysterious
+        Allure</h2>
+      <a href="www.google.com">
+        <p> Step into a world where time seems to stand still, where the echoes of centuries past
+          intertwine
+          with the
+          vibrant energy of the present. Welcome to the Venice Masquerade Festival, an event like no other, where masks
+          become the gateways to a universe of secrets and enchantment. As the golden sun sets over the ancient
+          canals,the
+          city awakens with a whisper of anticipation, preparing to embrace a spectacle that will leave visitors
+          spellbound. Intriguing, mysterious, and deeply rooted in history, the masquerade tradition in Venice dates
+          back
+          to the
+          12th century.</p>
+        &nbsp;
+        <p>This extraordinary celebration, which once masked the social hierarchies, has evolved into an
+          annual extravaganza, drawing visitors from all corners of the globe. Unravel the enigma behind the masks, as
+          locals and tourists alike converge on the opulent palaces and cobblestoned squares, where the essence of the
+          festival weaves its magic through the air. Join us as we delve into the heart of this captivating event,
+          exploring the elegance of Venetian costumes, the rhythm of masked dances, and the enduring allure that keeps
+          the
+          Venice Masquerade Festival alive for generations to come. Embark on a journey of wonder, where reality and
+          fantasy merge, and the line between the past and the present blurs into a kaleidoscope of memories and dreams.
+        </p>
+      </a>
     </div>
 
     <div class="grid-item grid-b">
-      <p> B - Tester hvordan dette funker aaaaaaaaaaaaa aaaaaa aaaaaa aaaaaaa aaaaa</p>
-      <p>sssss</p>
+      <img class="helsinki" src="Helsinki.jpg">
+      &nbsp;
+      <a href="www.google.com">Helsinki's Nordic Wonderland: Embracing Finnish Culture</a>
     </div>
 
     <div class="grid-item grid-c">
-      <p>-C-</p>
-      <a href="www.google.com">test</a>
+      <img class="venice2" src="Venice1.jpg">
+      &nbsp;
+      <a href="www.google.com">Venice: Navigating the Timeless Waterways of the Floating City</a>
     </div>
 
     <div class="grid-item lonly">
-      <!-- The other news  -->
-      <p>LONLY More information</p>
+      <p> Embrace the unknown</p>
+      &nbsp;
+      <p>for it is where you'll find the magic of discovery</p>
     </div>
 
-    <div class="grid-item grid-d">d her </div>
-    <div class="grid-item grid-e">e</div>
-    <div class="grid-item grid-f">f</div>
-    <div class="grid-item grid-g">g</div>
-    <div class="grid-item grid-h">h</div>
-    <div class="grid-item grid-i">i</div>
-    <div class="grid-item grid-j">j</div>
+    <div class="grid-item grid-d">
+      <img class="croatia" src="Croatia.jpg">
+      &nbsp;
+      <a href="www.google.com">
+        <p>Croatia's Hidden Gems: An Authentic Journey through Stunning Adriatic Coastlines</p>
+      </a>
+      &nbsp;
+    </div>
+
+    <div class="grid-item grid-e">
+      <img class="sardinia" src="Sardinia.jpg">
+      &nbsp;
+      <a href="www.google.com">
+        <p>Sardinia's Sun-Kissed Charms: Discovering Italy's Enchanting Mediterranean Island</p>
+      </a>
+      &nbsp;
+    </div>
+
+    <div class="grid-item grid-f">
+      <img class="barcelona" src="Barcelona.jpg">
+      &nbsp;
+      <a href="www.google.com">
+        <p>Barcelona's Architectural Marvels: Gaudi's Legacy and Beyond</p>
+      </a>
+      &nbsp;
+    </div>
+
+    <div class="grid-item grid-g">
+      <p> Welcome to the Unseen, your passport to extraordinary journeys off the beaten path. Step away from the
+        ordinary and embrace the allure of hidden destinations that few have had the privilege to explore.</p>
+      &nbsp;
+      <p>Go beyond tourist traps and discover the essence of each locale through the eyes of locals. At the Unseen,
+        we believe in responsible travel, leaving a positive footprint on the communities we visit. Our mission is to
+        provide authentic adventures that empower local economies and preserve the rich cultural heritage of each
+        location. Adventure awaits, so come and be a part of our community of explorers!</p>
+      </p>
+    </div>
   </section>
 
 </body>
