--- a/code/index.html
+++ b/code/index.html
@@ -6,20 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>test</title>
   <link rel="stylesheet" href="./style.css" />
-  <!-- dont forget the meta tag for responsiveness se vid hva er denne delen-->
-  <!--obs sjekk media only i css.tilfeldig kode. hvordan bruker jeg det-->
 </head>
 
 <body>
   <div>
-    <!-- TEST LOGO -->
+    <!-- LOGO -->
     <nav class="navbar">
       <div class="logo">BoE</div>
 
       <!-- NAVIGATION MENU -->
       <ul class="nav-links">
 
-        <!-- USING CHECKBOX HACK (ikon og drop) -->
+        <!-- USING CHECKBOX HACK-->
         <input type="checkbox" id="checkbox_toggle" />
         <label for="checkbox_toggle" class="hamburger">&#9776;</label>
 
@@ -36,55 +34,58 @@
 
 
 
-  <!--fjernet over-->
+  <!--GRID STARTS HERE-->
   <div class="grid-parent">
 
     <div class="grid-item grid-one">
       <h1>FALL INTO BEAUTY</h1>
-      <p>Embrace Autumn's Radiance</p>
+      <p>How To Embrace Autumn's Radiance</p>
+      <img class="article-one" src="./images/fallif.jpg" alt="Fall A">
     </div>
 
     <div class="grid-item sidebar">
-      <div class="sidebar-image">
-        <img src="./blomst.png" alt="grid flow test">
-      </div>
-      <div class="sidebar-text">
-        <p>MYE TEKST HER KKKKKKKKKKKKKKKKKKKKKKKKK OOOOOOOOOOOOOOOOOOO</p>
-      </div>
+      <h9>TO PRIORITIZE THIS AUTUMN</h9>
+      <img class="article-sidebar" src="./images/goal.jpeg" alt="Fall D">
+      <p9> / SLEEP / </p9>
+      <p9> / HEALTH / </p9>
+      <p9> / FRIENDS / </p9>
+      <p9> / FINANCE / </p9>
+      <p9> / TRAVEL / </p9>
+      <p9> / FOOD / </p9>
+      <p9> / FUN / </p9>
     </div>
 
     <div class="grid-item grid-two">
-
-      <section class="flex-parent">
-        <div class="flex-child red">
-          <img src="./blomst.png" alt="">
-          <button>Click here</button>
-        </div>
-      </section>
-      <p>big news
-        hmm</p>
+      <img class="article-two" src="./images/gull.jpg" alt="Fall C">
+      <h2>GOLDEN AUTUMN ELEGANCE</h2>
+      <p2>Welcome The Season In Luxurious Gold</p2>
     </div>
 
-    <div class="grid-item grid-three">
-      <p>daly news
-        testing
-      </p>
+    <div class="grid-item grid-four">
+      <p4>ALL THINGS PUMPKIN</p4>
+      <p44>Impress your friends with our simple Pumpkin Soup recipe or invite them over for some Pumpkin Pie and Pumpkin
+        Ppice Latte!</p44>
     </div>
+    <div class="grid-item grid-five">
+      <img class="article-pumpk" src="./images/pumpk1.jpg" alt="Fall E">
+    </div>
+    <div class="grid-item grid-six"><img class="article-pumpk" src="./images/pumpk2.jpg" alt="Fall E"></div>
+    <div class="grid-item grid-seven"><img class="article-pumpk" src="./images/pumpk3.jpg" alt="Fall E"></div>
 
-    <div class="grid-item grid-four">4</div>
-    <div class="grid-item grid-five">5</div>
-    <div class="grid-item grid-six">6</div>
-    <div class="grid-item grid-seven">7</div>
-    <div class="grid-item grid-eight">8</div>
-    <!--begynne med str før jeg legger mye inn-->
+    <div class="grid-item grid-eight">
+      <h8>TIMELESS BEAUTY;</h8>
+      <p8>A LESSON OF BEAUTY TROUGH THE DECADES</p8>
+      <img class="article-beauty" src="./images/Rebekah W Harkness Jack Mitchell.jpeg" alt="Fall H">
+      <p7>Jack Mitchell//Getty Images</p7>
+    </div>
 
   </div>
 
-
+  <!--FOOTER-->
 
   <footer>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!--How to differentiate between navbar and footer? I want to center the footer, dont forget to add css for the footer after-->
+
     <ul>
       <a href="#" class="fa fa-facebook"></a>
       <a href="#" class="fa fa-instagram"></a>
