--- a/code/index.html
+++ b/code/index.html
@@ -8,7 +8,7 @@
   <meta name="desciption" content="Technigo: Pre-course: News site.">
   <meta name="author" content="Beckie Morton">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- dont forget the meta tag for responsiveness -->
+  <!-- dont forget the meta tag for responsiveness - see above -->
 </head>
 
 <body>
