finished the project!

--- a/code/archive.html
+++ b/code/archive.html
@@ -24,23 +24,23 @@
       <h2 class="section-title">ARCHIVE</h2>
       <p class="page-description">Discover our exciting dog-themed articles through the years!</p>
       <h6>BREAKING! A WILD CHASE IN THE HEAT</h6>
-        <p class="page-description">Text text text...
+        <p class="page-description">She has done it again, folks. Looking at 11-year-old Odette...
         <p class="read-more"><a class="read-more-button" href="index.html">READ MORE</a>
       </p>
       <h6>ARMI: THE CAT BEHIND THE DOGS</h6>
-      <p class="page-description">Text text text...
+      <p class="page-description">"At the time we had no dogs, but two cats instead"...
         <p class="read-more"><a class="read-more-button" href="#armi">READ MORE</a>
       </p>
       <h6>DOG PARK: PAWS UP OR DOWN?</h6>
-      <p class="page-description">Text text text...
+      <p class="page-description">Parks, parks, parks everywhere! For big dogs, small dogs...
         <p class="read-more"><a class="read-more-button" href="#dogpark">READ MORE</a>
       </p>
       <h6>DOG TREAT REVIEW: DENTASTIX</h6>
-      <p class="page-description">Text text text...
+      <p class="page-description">"Dentastix" bones have been a true classic like no other...
         <p class="read-more"><a class="read-more-button" href="#dentastix">READ MORE</a>
       </p>
       <h6>COOL FOR THE SUMMER</h6>
-      <p class="page-description">Text text text...
+      <p class="page-description">Trimming your dogs thick fur can be a real game changer for their comfort in the heat...
         <p class="read-more"><a class="read-more-button" href="#coolforthesummer">READ MORE</a>
       </p>
     </section>
