--- a/code/index.html
+++ b/code/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Terrier Times</title>
     <link rel="stylesheet" href="./style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <header>
@@ -26,8 +27,9 @@
         She has done it again, folks. Looking at 11-year-old Odette and her daily antics, you would not guess how fast this Jack-Cairn lady can run when given the chance.<br/><br/>
         This dog doesn't particularly enjoy excercise - except when there's an element of chase tied to it", a source tells Terrier Times. On Monday the 31st of July, Odette managed to wiggle herself out of her harness during her afternoon walk.<br/><br/>
         She was chased around the neighbourhood for almost two hours before getting caught.
-        The day was quite hot, and as Odette has quite a thick fur, she tired herself out eventually and gave the worried search party a chance to get her to safety. An adventure like this could be quite dangerous for and old dog with a thick fur.
+        The day was quite hot, and as Odette has quite a thick fur, she tired herself out eventually and gave the worried search party a chance to get her to safety. An adventure like this could be quite dangerous for an old dog with a thick fur.
         "Her heart was beating quite fast for a while there, but luckily it calmed down after a while", the owner says wth relief.<br/><br/>
+        We can't wait what she does next - hopefully not another runaway adventure, though!
       </p>
     </section>
 
