Changed file structure to synk with netlify

--- a/code/index.html
+++ b/code/index.html
@@ -22,7 +22,7 @@
   <header>
     <div class="content-wrapper">
       <a href="#">
-        <img src="../img/SNL.png" alt="simple-nordic-life-logo">
+        <img src="img/SNL.png" alt="simple-nordic-life-logo">
       </a>
       <nav>
         <div class="hamburger">
@@ -50,7 +50,7 @@
     <section id="trending" class="featured-trends">
       <div class="content-wrapper">
         <div class="trend">
-          <img src="../img/featured-minimalist-light.jpg" alt="Minimalist Lighting Innovations">
+          <img src="img/featured-minimalist-light.jpg" alt="Minimalist Lighting Innovations">
           <h3>Minimalist Lighting Innovations</h3>
           <p>Illuminate your space with the essence of minimalism. Dive into the world of innovative lighting designs
             that embrace simplicity while delivering artistic and functional illumination.</p>
@@ -58,7 +58,7 @@
         </div>
 
         <div class="trend">
-          <img src="../img/featured-kitchen.jpg" alt="Scandinavian Kitchen">
+          <img src="img/featured-kitchen.jpg" alt="Scandinavian Kitchen">
           <h3>Functional Simplicity in Scandinavian Kitchens</h3>
           <p>Discover how Scandinavian kitchens achieve functionality and elegance through clean lines, open shelving,
             and practical layouts.</p>
@@ -71,7 +71,7 @@
       <div class="content-wrapper">
         <article>
           <figure class="designer-image">
-            <img src="../img/anna-berglund.jpg" alt="Designer Anna Berglund">
+            <img src="img/anna-berglund.jpg" alt="Designer Anna Berglund">
           </figure>
           <div class="designer-content">
             <h2>Designer Spotlight:<br> Anna Berglund</h2>
@@ -94,49 +94,49 @@
       <div class="content-wrapper">
         <figure class="gallery-item">
           <div class="image-container">
-            <img src="../img/gallery-1-stairs.jpg" alt="Wooden stairs in hallway">
-            <figcaption>Inviting wooden stairs in a sunlit hallway.</figcaption>
+            <img src="img/gallery-1-stairs.jpg" alt="Wooden stairs in hallway">
+            <figcaption>Let the sun in.</figcaption>
           </div>
         </figure>
         <figure class="gallery-item">
           <div class="image-container">
-            <img src="../img/gallery-2-flowers.jpg" alt="Tulips in a vase">
+            <img src="img/gallery-2-flowers.jpg" alt="Tulips in a vase">
             <figcaption>Brightening up the room with a vase of fresh tulips.</figcaption>
           </div>
         </figure>
         <figure class="gallery-item">
           <div class="image-container">
-            <img src="../img/gallery-3-kitchen.jpg" alt="Scandinavian kitchen with black kitchen cabinets">
+            <img src="img/gallery-3-kitchen.jpg" alt="Scandinavian kitchen with black kitchen cabinets">
             <figcaption>Elegantly designed Scandinavian kitchen with sleek black cabinets.</figcaption>
           </div>
         </figure>
         <figure class="gallery-item">
           <div class="image-container">
-            <img src="../img/gallery-4-kid.jpg" alt="A kid sitting in a sofa holding a yellow pillow">
-            <figcaption>Cozy moments: A child enjoying comfort on a sofa with a cheerful yellow pillow.</figcaption>
+            <img src="img/gallery-4-kid.jpg" alt="A kid sitting in a sofa holding a yellow pillow">
+            <figcaption>Cozy moments: Make your living space kids-friendly.</figcaption>
           </div>
         </figure>
         <figure class="gallery-item">
           <div class="image-container">
-            <img src="../img/gallery-5-furniture.jpg" alt="Modern minimalist furniture in a white room">
+            <img src="img/gallery-5-furniture.jpg" alt="Modern minimalist furniture in a white room">
             <figcaption>Showcasing modern minimalism in a serene white room.</figcaption>
           </div>
         </figure>
         <figure class="gallery-item">
           <div class="image-container">
-            <img src="../img/gallery-6-shadow.jpg" alt="Cool living space with striped shadow">
+            <img src="img/gallery-6-shadow.jpg" alt="Cool living space with striped shadow">
             <figcaption>Creating artistic intrigue with creative shadow play in the living space.</figcaption>
           </div>
         </figure>
         <figure class="gallery-item">
           <div class="image-container">
-            <img src="../img/gallery-7-chairs.jpg" alt="Four minimalist design chairs against wall">
-            <figcaption>Simplicity at its best: Four minimalist chairs against a textured wall.</figcaption>
+            <img src="img/gallery-7-chairs.jpg" alt="Four minimalist design chairs against wall">
+            <figcaption>Simplicity at its best: Explore the minimialism of chairs.</figcaption>
           </div>
         </figure>
         <figure class="gallery-item">
           <div class="image-container">
-            <img src="../img/gallery-8-flowers-bed.jpg" alt="Flower arrangements in bed">
+            <img src="img/gallery-8-flowers-bed.jpg" alt="Flower arrangements in bed">
             <figcaption>Nature's touch: Gentle flower arrangements adding charm to the bedroom.</figcaption>
           </div>
         </figure>
