--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,48 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width-device-width, initial-scale=1.0">
     <!-- Change the title below -->
-    <title>News Site</title>
+    <title>Emmys baksida</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
+      <nav>
+          <ul class="navigation">
+            <li><a href="#">Hem</a></li>
+            <li><a href="#">Ätbart</a></li>
+            <li><a href="#">Drycker</a></li>
+             <li><a href="#">Om</a></li>
+          <label class="logo">Emmys baksida</label>
+        </ul>
+      </nav>
+      <h1>Emmys baksida</h1>
       <!-- Some kind of logo and navbar -->
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
+      <h2>Här finns många av mina favoritgodsaker.</h2>
+      <p>En härlig blandning av kakor, tårtor och även några drycker som passar perfekt till fikastunden!</p>
+      <img src="./pictures/cake.jpg"/>
+
     </section>
 
-    <section class="">
+    <section class="fika">
+      <img src="./pictures/apple-cheesecake.jpg">
+      <h3>Äppelcheesecake</h3>
+      <img src="./pictures/cake.jpg">
+      <h3>Jordgubbsårta</h3>
+      <img src="./pictures/chokladbollar.jpg">
+      <h3>Chokladbollar</h3>
+      <img src="./pictures/iced-coffee.jpg">
+      <h3>Iskaffe</h3>
+      <img src="./pictures/kladdkaka.jpg">
+      <h3>Kladdkaka</h3>
+      <img src="./pictures/saft.jpg">
+      <h3>Flädersaft</h3>
       <!-- The other news  -->
     </section>
   </body>
