--- a/code/index.html
+++ b/code/index.html
@@ -70,7 +70,9 @@
 
     <div class="flex-box">
       <img src="./Images/houseofshade_5.jpg" alt="hand and sculpture">
-      <h2>No She Did Not!</h2>
+
+      <li><a href="No She Did Not!">No She Did Not!</a></li>
+
       <p> Read all about the womans benefits of taking over the world and make it a better place. World peace and free
         cava for all mankind.</p>
     </div>
@@ -84,18 +86,20 @@
   <section class="other-news">
 
     <div class="grid-item"><img src="./Images/houseofshade_2.jpg" alt="woman wiith flower">
-      <h2>What To Wear</h2>
+      <li><a href="What To Wear">What To Wear</a></li>
     </div>
 
     <div class="grid-item"><img src="./Images/houseofshade_13.jpg" alt="woman listning">
-      <h2>All The Tea</h2>
+      <li><a href="The Tea">The Tea</a></li>
     </div>
 
     <div class="grid-item"><img src="./Images/houseofshade_1.jpg" alt="drag queen at a party">
-      <h2>The Parties</h2>
+      <li><a href="The Parties">The Parties</a></li>
     </div>
 
   </section>
+
+  <!-- The other news  -->
 
   <section class="quote">
 
@@ -111,6 +115,20 @@
 
 
   </section>
+
+  <!-- The last news  -->
+
+  <section class="the-last-news">
+
+    <div class="last-news">
+      <img src="./Images/houseofshade_10.jpg" alt="magazine on floor">
+
+      <li><a href="No She Did Not!">No She Did Not!</a></li>
+
+      <p> Read all about the womans benefits of taking over the world and make it a better place. World peace and free
+        cava for all mankind.</p>
+    </div>
+
 
 
 </body>
