last changes part 3

--- a/code/index.html
+++ b/code/index.html
@@ -123,10 +123,10 @@
     <div class="last-news">
       <img src="./Images/houseofshade_10.jpg" alt="magazine on floor">
 
-      <li><a href="No She Did Not!">No She Did Not!</a></li>
+      <li><a href="Read All About It!">Read All About It!</a></li>
 
-      <p> Read all about the womans benefits of taking over the world and make it a better place. World peace and free
-        cava for all mankind.</p>
+      <p> Read all about how RuPaul Charles built his empire with absoulute fiercness and brains. The one-liners just
+        keep me rich you know! he says.</p>
     </div>
 
 
